[tool.poetry]
name = "python-langgraph-examples"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
black = "^25.1.0"
isort = "^6.0.0"
langchain = "^0.3.19"
langchain-openai = "^0.3.6"
langgraph = "^0.2.74"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
